Refactor logging into InternalLoggerFactory/AbstractInternalLogger; add TRACE level
Split the monolithic InternalLogger class into an InternalLogger interface,
an InternalLoggerFactory holding config/state, an AbstractInternalLogger
base implementation, a SimpleInternalLogger stderr sink, and a
Slf4jInternalLogger that delegates to SLF4J reflectively. Add a TRACE
log level with per-level enabled checks and trace method handles, document
the new level in the README, and fix AgentAttachTest to set includes via
system property.